Add "fmt" script for running Prettier to format code

--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "fmt": "prettier --write --list-different .",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
