--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,23 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "nuxt": "^3.7.3",
     "prettier": "^3.0.3"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
+    "@prisma/client": "^5.3.1",
+    "@tailwindcss/forms": "^0.5.6",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.40.0",
+    "formidable": "^3.5.1",
+    "human-time": "^0.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
+    "mitt": "^3.0.1",
+    "prisma": "^5.3.1",
+    "url-pattern": "^1.0.3"
   }
 }
